# papermario-dx

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .envrc  .gitattributes  .gitignore  CHANGELOG.md  Doxyfile  INSTALL.md  README.md  SETUP.md  build.bat  flake.nix  install_deps.sh  libdragon.nix  pcm_to_c.py  requirements.txt  requirements_extra.txt  run  shell.nix  star_rod.cfg  treefmt.toml
.github/: FUNDING.yml  release.yml
assets/: stack.yaml
assets/dx/rust/: Cargo.toml  README  mips-nintendo64-none.json
assets/dx/rust/src/: lib.rs
include/: audio.h  camera.h  common.h  common.hpp  common_structs.h  effect_shims.h  effects.h  effects_internal.h  entity.h  enums.h  evt.h  filemenu.h  functions.h  game_modes.h  gbi_custom.h  hit_asset.h  hud_element.h  imgfx.h  include_asm.h  include_asset.h  inventory.h  item_entity.h  macros.h  map.h  math_util.h  messages.h  mips.h  model.h  msg.h  npc.h  overlay.h  qsort.h  rumble.h  saved_flag_names.h  star_rod_macros.h  types.h  ultra64.h  variables.h  vars_access.h
lib/: ultralib.nix
manual/: assets.md  changelog.md  gdb.md  gh-actions.md  introduction.md  modules.md  setup-dx.sh  setup.md  star-rod.md
module/: README.md  hello.c
papermario/: README.md
src/: 101b90_len_8f0.c  23680.c  43F0.c  5B320.c  77480.c  7B440.c  7BB60.c  7E9D0.c  80850_len_3060.c  891b0_len_fb0.c  8a860_len_3f30.c  animation_script.h  animator.c  audio.h  background.c  background.cpp  background_gfx.c  battle_heap_create_obfuscated.c  battle_hud_scripts.h  battle_ui_gfx.c  cam_main.c  cam_math.c  cam_mode_1.c  cam_mode_2.c  (+98 more)
(+4748 files in other folders)
