[package]
name = "rust"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
#libc = {version = "0.2", default-features = false}
#no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
#libdragon-bindings = { git = "https://github.com/DagothBob/libdragon-bindings" }
#cstr_core = {version = "0.2", default-features = false}

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
lto = "off"
overflow-checks = false

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = "off"
opt-level = "z"

[lib]
name = "rust"
crate-type = ["staticlib"]
